--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "types": ["next-auth"],
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
