--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@eslint/eslintrc": "^3",
     "@faker-js/faker": "^10.0.0",
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^20",
+    "@types/node": "^20.19.21",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
@@ -60,6 +60,7 @@
     "tailwindcss": "^4.1.11",
     "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.5",
-    "typescript": "^5"
+    "typescript": "^5.9.3",
+    "wait-port": "^1.1.0"
   }
 }
