--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "db:seed": "tsx db/seed.ts"
   },
   "dependencies": {
+    "@apollo/client": "^4.1.3",
+    "@apollo/server": "^5.3.0",
+    "@as-integrations/next": "^4.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -31,6 +34,8 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.2",
+    "graphql": "^16.12.0",
+    "graphql-tag": "^2.12.6",
     "jose": "^6.1.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
