--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.95.2",
     "@upstash/ratelimit": "^2.0.8",
     "@upstash/redis": "^1.36.1",
     "bcryptjs": "^3.0.2",
@@ -37,6 +39,7 @@
     "graphql": "^16.12.0",
     "graphql-tag": "^2.12.6",
     "jose": "^6.1.0",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
@@ -57,6 +60,7 @@
     "@eslint/eslintrc": "^3",
     "@faker-js/faker": "^10.0.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.21",
     "@types/nodemailer": "^7.0.5",
     "@types/react": "^19",
